# Clutterbox

./: .gitignore  CMakeLists.txt  README.md
bench/: bench.py  bench_batched.py  computestats.py  gensamples.py
lib/nvidia/nvidia/: helper_cuda.h
misc/: seeds_random_org_10000.txt  seeds_to_show.txt
output/analysis/: analyse.py  analyseQueryTimes.py  buildDistanceFunctionsSpreadsheet.py  buildmasterspreadsheet.py  computeclutter.py
src/: main.cpp
src/clutterbox/: clutterBoxExperiment.cpp  clutterBoxExperiment.hpp  clutterBoxKernels.cu  clutterBoxKernels.cuh  clutterBoxUtilities.cpp  clutterBoxUtilities.h
src/clutterbox/methods/: 3DSCMethod.cpp  3DSCMethod.h  FPFHMethod.cpp  FPFHMethod.h  QUICCIMethod.cpp  QUICCIMethod.h  RICIMethod.cpp  RICIMethod.h  SIMethod.cpp  SIMethod.h
src/clutterbox/methods/types/: ClutterboxMethod.h  ExecutionTimes.h
src/experimentUtilities/: listDir.cpp
src/experiments/: clutterBoxExperiment.cpp  clutterBoxExperiment.hpp
src/experiments/clutterBox/: clutterBoxKernels.cu  clutterBoxKernels.cuh  clutterBoxUtilities.cpp  clutterBoxUtilities.h  experimentSettingsGenerator.cpp  experimentSettingsGenerator.h
src/experiments/clutterBox/types/: ExperimentSettings.h
src/utilities/: Histogram.cpp  Histogram.h  listDir.cpp  modelScaler.cpp  modelScaler.h  randomFileSelector.cpp  randomFileSelector.h  stringUtils.cpp  stringUtils.h
tools/clutterEstimator/: clutterKernel.cu  clutterKernel.cuh  main.cpp
tools/clutterboxSceneVisualiser/: generateScreenshots.py
tools/projectionBenchmark/: CMakeLists.txt  compare.cpp
tools/quicciDistanceFunctionComparison/: clutterSphereMeshAugmenter.cpp  clutterSphereMeshAugmenter.h  main.cpp  quicciDistanceFunctionBenchmark.cpp  quicciDistanceFunctionBenchmark.h
tools/servermanager/: servermanager.py
